--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,9 @@ services:
     image: orgo/api
     ports:
       - 3000:3000
+    volumes:
+      - ./api/package.json:/home/app/package.json
+      - ./api/index.js:/home/app/index.js
 
   dbagent:
     depends_on:
