[webspicy] First migration & all tetst completed

--- a/webspicy/api/ingredients/deleteOne.yml
+++ b/webspicy/api/ingredients/deleteOne.yml
@@ -36,7 +36,7 @@ services:
   counterexamples:
 
     - description: |-
-        when requested for an unexisting ingredient
+        when requested for an non-existent ingredient
       params:
         id: 56789765
       expected:
