--- a/api/package.json
+++ b/api/package.json
@@ -2,9 +2,13 @@
   "name": "orgo_app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "babel-node src/index.js",
+    "test": "mocha --reporter=mocha-junit-reporter --require @babel/register --recursive --reporter-options mochaFile=tests/test-results.xml tests",
+    "test:coverage": "nyc --reporter=cobertura mocha --require @babel/register --recursive tests",
+    "test:watch": "mocha --require @babel/register --recursive --watch tests",
+    "lint": "eslint src tests *.js .eslintrc.js",
+    "lint:fix": "eslint --fix src tests *.js .eslintrc.js"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +21,17 @@
     "knex": "0.21.1",
     "morgan": "^1.10.0",
     "pg": "8.4.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.6",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/register": "^7.12.1",
+    "@enspirit/eslint-config-node": "0.0.6",
+    "chai": "^4.2.0",
+    "eslint": "^7.13.0",
+    "mocha": "^8.2.1",
+    "mocha-junit-reporter": "^2.0.0",
+    "nyc": "^15.1.0"
   }
 }
